2010-07-15  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Fixed use of step sizes in createIsometricPlot (as found by Andreas)
	* plotpriv.tcl: Import legend variable in drawing of horizontal bars
	* plotpriv.tcl: Commented out some unfinished code in scrolling timecharts
	* plotpriv.tcl: Fixed variable names in drawing label dots in polar plots
	* plotpriv.tcl: Draw line with correct thickness in legend
	* pkgIndex.tcl: Changed version to 1.9.2

2010-07-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* plotannot.tcl: Made a number of fixes (mistyped variable names,
	* plotaxis.tcl: unbraced expressions, ...) found by tclchecker.
	* plotbusiness.tcl: Added a few checker pragmas for bogus warnings.
	* plotcontour.tcl:
	* plotpack.tcl:
	* plotpriv.tcl:

2010-07-06  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotaxis.tcl: Fixing a bug wrt stacked histograms (reported by Torsten Berg)
	* plotaxis.tcl: Added support for minor tickmarks, ticklength, label offset
	* plotconfig.tcl: Ditto
	* plotaxis.tcl: Implemented solution for a bug in vtext method (supplied by Torsten Berg)
	* plotaxis.tcl: Corrected positioning of vertical text (bug noted by Torsten Berg)
	* plotchart.tcl: Added method for plotting functions (and several options)
	* plotpriv.tcl: Added support for line width
	* pkgIndex.tcl: Changed version Plotchart to 1.9.1

2010-06-21  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Added creation method for target diagrams, performance profiles and 3d ribbon plots
	* plotdemos14.tcl: Added demonstration of so-called target diagram
	* plotdemos15.tcl: Added demonstration of 3d ribbons (provided by Keith Vetter)
	* plotdemos16.tcl: Added demonstration of performance profiles
	* plotchart.man: Documentation added for target diagrams, performance profiles and 3d ribbon plots
	* plotspecial.tcl: New file for methods that deal with specialised plots