@@ -1,3 +1,10 @@
+2010-08-12  Arjen Markus  <arjenmarkus@users.sourceforge.net>
+	* plotchart.tcl: Added plotmethod to export
+	* plotconfig.tcl: Implemented plotmethod for customised commands
+	* plotpriv.tcl: Support for customised commands
+	* plotannot.tcl: Added missing anchor to the "dictionary" TextDir
+	  and new method for configuring plaintext annotations
+
 2010-07-15  Arjen Markus  <arjenmarkus@users.sourceforge.net>
 	* plotchart.tcl: Fixed use of step sizes in createIsometricPlot (as found by Andreas)
 	* plotpriv.tcl: Import legend variable in drawing of horizontal bars
